# super_modbus

./: .clang-format  .clang-tidy  .codecov.yml  .codespell-ignore  .gitignore  .valgrind-suppressions  BUILD_AND_TEST.md  CMakeLists.txt  Doxyfile.in  QUICK_START.md  README.md  main.cpp
.devcontainer/: Dockerfile  devcontainer.json
.githooks/: pre-commit  pre-push
.github/: CODEOWNERS
.github/workflows/: ci.yml  pre-commit-check.yml
cmake/: AddCoverage.cmake  AddCppCheck.cmake  AddMemCheck.cmake
examples/: README.md  example_master.cpp  example_master_slave_loopback.cpp  example_serial_transport.cpp  example_slave.cpp  example_virtual_port_test.cpp  serial_transport.hpp  tcp_transport.hpp  test_master_comprehensive.cpp  testable_slave.cpp  testable_tcp_slave.cpp  udp_transport.hpp
include/super_modbus/: super_modbus.hpp
include/super_modbus/ascii/: ascii_frame.hpp  ascii_master.hpp  ascii_slave.hpp
include/super_modbus/common/: address_map.hpp  address_span.hpp  byte_helpers.hpp  crc16.hpp  exception_code.hpp  function_code.hpp  lrc8.hpp  wire_format_options.hpp
include/super_modbus/rtu/: rtu_frame.hpp  rtu_master.hpp  rtu_request.hpp  rtu_response.hpp  rtu_slave.hpp
include/super_modbus/tcp/: tcp_frame.hpp  tcp_master.hpp  tcp_request.hpp  tcp_response.hpp  tcp_slave.hpp
include/super_modbus/transport/: byte_reader.hpp  byte_writer.hpp  memory_transport.hpp
scripts/: build.sh  ci-local.sh  create_virtual_ports.sh  setup-git-hooks.sh  test_master_comprehensive.sh  test_with_mbpoll.sh  test_with_mbpoll_comprehensive.sh  test_with_mbpoll_tcp.sh  test_with_modbus_poll.md
src/: super_modbus.cpp
src/ascii/: ascii_frame.cpp  ascii_master.cpp  ascii_slave.cpp
src/rtu/: rtu_frame.cpp  rtu_master.cpp  rtu_request.cpp  rtu_slave.cpp
src/tcp/: tcp_frame.cpp  tcp_master.cpp  tcp_request.cpp  tcp_slave.cpp
test/: CMakeLists.txt  gtest_test.cpp
test/ascii/: test_ascii_frame.cpp  test_ascii_integration.cpp  test_ascii_master_coverage.cpp
test/common/: test_byte_helpers.cpp  test_common_utilities.cpp  test_crc16.cpp
test/rtu/: test_broadcast.cpp  test_edge_cases.cpp  test_error_handling.cpp  test_event_log.cpp  test_fifo_queue.cpp  test_integration.cpp  test_master_errors.cpp  test_master_integration.cpp  test_new_function_codes.cpp  test_remaining_function_codes.cpp  test_rtu_frame_edge_cases.cpp  test_rtu_master.cpp  test_rtu_master_coverage.cpp  test_rtu_request_edge_cases.cpp  test_rtu_slave.cpp  test_rtu_slave_coverage.cpp
test/tcp/: test_tcp_frame.cpp  test_tcp_frame_edge_cases.cpp  test_tcp_master.cpp  test_tcp_master_coverage.cpp  test_tcp_request_edge_cases.cpp  test_tcp_slave.cpp  test_tcp_slave_coverage.cpp
test/transport/: test_memory_transport.cpp
